# omnirevolve-esp32-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/esp32_core/: CMakeLists.txt
components/esp32_core/include/omnirevolve/: esp32_core.h
components/esp32_core/include/omnirevolve/core/: state.h
components/esp32_core/include/omnirevolve/drivers/: keypad.h  oled_display.h
components/esp32_core/include/omnirevolve/hal/: pins.h
components/esp32_core/include/omnirevolve/link/: stm_link.h  uart_proto.h
components/esp32_core/src/: esp32_core.c
components/esp32_core/src/core/: state.c
components/esp32_core/src/drivers/: keypad.c  oled_display.c
components/esp32_core/src/link/: stm_link.c  uart_proto.c
components/esp32_core/src/tasks/: plotter_control.c
components/omnirevolve_core/: CMakeLists.txt
components/omnirevolve_core/include/omnirevolve/drivers/: keypad.h  oled_display.h
components/omnirevolve_core/include/omnirevolve/esp32_core/: esp32_core.h
components/omnirevolve_core/include/omnirevolve/link/: stm_link.h  uart_link.h
components/omnirevolve_core/src/: esp32_core.c
components/omnirevolve_core/src/drivers/: keypad.c  oled_display.c
components/omnirevolve_core/src/link/: stm_link.c  uart_link.c
lib/: CMakeLists.txt  consumer_stub.c  consumer_stub.h  esp32_to_stm32.c  esp32_to_stm32.h  microros_bridge.c  plotter_config.h  ring_buffer.c  ring_buffer.h  spi_feeder.c  spi_feeder.h
main/: CMakeLists.txt  app_main.c  main.c  oled_test.c  shared
